disable full minification to let the site shine

--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,8 @@
 <!doctype html>
-<!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js"> <!--<![endif]-->
 <html>
 
 <head>
@@ -20,14 +16,14 @@
     <!-- TODO add local resources -->
     <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
-    <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/grid.css">
-    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/meanmenu.css">
     <link rel="stylesheet" href="styles/uniform.css">
-    <link rel="stylesheet" href="styles/devoxx.css">
     <link rel="stylesheet" href="styles/isotope.css">
+    <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="styles/devoxx.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
     <!-- build:js scripts/scripts-ie.js -->
@@ -38,11 +34,10 @@
     <![endif]-->
     <!-- endbuild -->
     
-    <!-- build:js scripts/scripts.js -->
     <script src="components/jquery/jquery.js"></script>
     <script src="components/modernizr/modernizr.js"></script>
     <script src="components/unstable-angular-complete/angular.js"></script>
-    <script src="components/angular-cookies/angular-cookies.js"></script>
+    <script src="components/unstable-angular-complete/angular-cookies.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="components/bxslider-4/jquery.bxslider.js"></script>
     <script src="components/meanMenu/jquery.meanmenu.js"></script>
@@ -50,6 +45,7 @@
     <script src="components/isotope/jquery.isotope.js"></script>
     <script src="components/moment/moment.js"></script>
 
+    <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
     <script src="scripts/services.js"></script>
