Contact page implemented, REST service TODO

--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
         }(document, 'script'));
     </script>
 </head>
-<body class="callforpapers" ng-app="cfpSpeakerApp">
+<body ng-app="cfpSpeakerApp">
 <!--[if lt IE 7]>
 <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to
