(re)enable full minification (a collision between 2 css files caused minfication not working before so final main.css is renamed to all.css

--- a/app/index.html
+++ b/app/index.html
@@ -16,12 +16,12 @@
     <!-- TODO add local resources -->
     <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
+    <!-- build:css styles/all.css -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/meanmenu.css">
     <link rel="stylesheet" href="styles/uniform.css">
     <link rel="stylesheet" href="styles/isotope.css">
-    <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/devoxx.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -33,7 +33,8 @@
     <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <!-- endbuild -->
-    
+
+    <!-- build:js scripts/scripts.js -->
     <script src="components/jquery/jquery.js"></script>
     <script src="components/modernizr/modernizr.js"></script>
     <script src="components/unstable-angular-complete/angular.js"></script>
@@ -44,8 +45,6 @@
     <script src="components/jquery.uniform/jquery.uniform.js"></script>
     <script src="components/isotope/jquery.isotope.js"></script>
     <script src="components/moment/moment.js"></script>
-
-    <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
     <script src="scripts/services.js"></script>
