--- a/app/index.html
+++ b/app/index.html
@@ -274,12 +274,9 @@
 <div id="disclaimer" class="area black">
     <div class="grid">
         <div class="row">
-            <div class="col11">
-                <a href="#">privacy policy</a> | <a href="#">disclaimer</a>
-            </div>
-            <div class="col9">
-                design by <a href="http://www.three-sixty.be" target="_blank">Three-Sixty Media</a>
-            </div>
+            <!--<div class="col11">-->
+                <!--<a href="#">privacy policy</a> | <a href="#">disclaimer</a>-->
+            <!--</div>-->
         </div>
     </div>
 </div>
