Pause tweets, hide google as sponsor and mobile apps

--- a/app/index.html
+++ b/app/index.html
@@ -129,7 +129,7 @@
                                                ng-disabled="model.loginDisabled"/>
                                     </form>
 
-                                    <div class="connect clearfix">
+                                    <div class="connect clearfix hidden">
                                         <a href="#" class="btnFacebook">Facebook</a>
                                         <a href="#" class="btnTwitter">Twitter</a>
                                         <a href="#" class="btnLinkedin">LinkedIn</a>
@@ -261,7 +261,7 @@
 
             <div class="col10 sponsors">
                 <h4>Our sponsors</h4>
-                <a href="https://developers.google.com/" target="_blank"><img src="images/sponsors/google.png"
+                <a class="hidden" href="https://developers.google.com/" target="_blank"><img src="images/sponsors/google.png"
                                                                               alt="Google"/></a>
                 <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img
                         src="images/sponsors/oracle.png" alt="Oracle"/></a>
