Disable autocomplete for login

--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
                         <ul>
                             <li>
                                 <div class="popup">
-                                    <form ng-submit="login()" class="clearfix">
+                                    <form ng-submit="login()" class="clearfix" autocomplete="off">
                                         <div class="alert alert-error" ng-show="model.loginError">{{model.loginError}}
                                         </div>
                                         <input type="text" name="login" value="" placeholder="E-mail"
