--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
         var _gaq = [
-            ['_setAccount', 'UA-XXXXX-X'],
+            ['_setAccount', 'UA-28382932-1'],
             ['_trackPageview']
         ];
         (function (d, t) {
