--- a/app/index.html
+++ b/app/index.html
@@ -65,15 +65,14 @@
     <!-- endbuild -->
 
     <script>
-        var _gaq = [
-            ['_setAccount', 'UA-25301290-1'],
-            ['_trackPageview']
-        ];
-        (function (d, t) {
-            var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-            g.src = '//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g, s)
-        }(document, 'script'));
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-41435900-1', 'devoxx.be');
+        ga('send', 'pageview');
+
     </script>
 </head>
 <body ng-app="cfpSpeakerApp">
