--- a/app/index.html
+++ b/app/index.html
@@ -265,7 +265,12 @@
                                                                               alt="Google"/></a>
                 <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img
                         src="images/sponsors/oracle.png" alt="Oracle"/></a>
-                <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
+                <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a></br>
+                <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a></br>
+                <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
+                <a href="http://www.hello2morrow.com/" target="_blank"><img src="images/sponsors/hello2morrow.png" alt="Hello2Morrow"/></a>
+                <a href="http://www.vaadin.com/" target="_blank"><img src="images/sponsors/vaadin.png" alt="Vaadin"/></a>
+                <a href="http://www.aca-it.be/" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
             </div>
         </div>
     </div>
