Added sponsors in white area above footer

--- a/app/index.html
+++ b/app/index.html
@@ -220,19 +220,43 @@
     <ng-view/>
 </div>
 
+<div id="sponsors" class="white">
+    <div class="grid">
+        <h2>Our sponsors</h2>
+        <div class="row">
+            <div class="col5">
+                <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img
+                        src="images/sponsors/oracle.png" alt="Oracle"/></a>
+            </div>
+            <div class="col5">
+                <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
+            </div>
+            <div class="col5">
+                <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a>
+            </div>
+            <div class="col5">
+                <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col5">
+                <a href="http://www.hello2morrow.com/" target="_blank"><img src="images/sponsors/hello2morrow.png" alt="Hello2Morrow"/></a>
+            </div>
+            <div class="col5">
+                <a href="http://www.vaadin.com/" target="_blank"><img src="images/sponsors/vaadin.png" alt="Vaadin"/></a>
+            </div>
+            <div class="col5">
+                <a href="http://www.aca-it.be/" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <footer class="area grey">
     <div class="grid">
 
         <div class="row">
             <div class="col5">
-                <h4>previous editions</h4>
-                <ul>
-                    <li><a href="http://devoxx.com/display/DV12/Home">Edition 2012</a></li>
-                    <li><a href="http://devoxx.com/display/DV11/Home">Edition 2011</a></li>
-                    <li><a href="http://devoxx.com/display/Devoxx2K10/Home">Edition 2010</a></li>
-                    <li><a href="http://devoxx.com/display/DV09/Home">Edition 2009</a></li>
-                </ul>
-
                 <h4>Site map</h4>
                 <ul>
                     <li><a href="#team">Team</a></li>
@@ -246,31 +270,29 @@
             </div>
 
             <div class="col5">
+                <h4>previous editions</h4>
+                <ul>
+                    <li><a href="http://devoxx.com/display/DV12/Home">Edition 2012</a></li>
+                    <li><a href="http://devoxx.com/display/DV11/Home">Edition 2011</a></li>
+                    <li><a href="http://devoxx.com/display/Devoxx2K10/Home">Edition 2010</a></li>
+                    <li><a href="http://devoxx.com/display/DV09/Home">Edition 2009</a></li>
+                </ul>
+            </div>
+
+            <div class="col5">
                 <h4>Other countries</h4>
                 <ul>
                     <li><a href="http://www.devoxx.com/display/FR13/Accueil">Devoxx France</a></li>
                     <li><a href="http://www.devoxx.com/display/UK13/Home">Devoxx UK</a></li>
                 </ul>
+            </div>
 
+            <div class="col5">
                 <h4>Follow us</h4>
                 <ul>
                     <li><a href="https://www.facebook.com/devoxxcom">Facebook</a></li>
                     <li><a href="https://twitter.com/devoxx">Twitter</a></li>
                 </ul>
-            </div>
-
-            <div class="col10 sponsors">
-                <h4>Our sponsors</h4>
-                <a class="hidden" href="https://developers.google.com/" target="_blank"><img src="images/sponsors/google.png"
-                                                                              alt="Google"/></a>
-                <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img
-                        src="images/sponsors/oracle.png" alt="Oracle"/></a>
-                <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a></br>
-                <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a></br>
-                <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
-                <a href="http://www.hello2morrow.com/" target="_blank"><img src="images/sponsors/hello2morrow.png" alt="Hello2Morrow"/></a>
-                <a href="http://www.vaadin.com/" target="_blank"><img src="images/sponsors/vaadin.png" alt="Vaadin"/></a>
-                <a href="http://www.aca-it.be/" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
             </div>
         </div>
     </div>
