Improve sponsors look and feel

--- a/app/index.html
+++ b/app/index.html
@@ -226,37 +226,6 @@
     <ng-view/>
 </div>
 
-<div id="sponsors" class="white">
-    <div class="grid">
-        <h2>Our sponsors</h2>
-        <div class="row">
-            <div class="col5">
-                <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img
-                        src="images/sponsors/oracle.png" alt="Oracle"/></a>
-            </div>
-            <div class="col5">
-                <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
-            </div>
-            <div class="col5">
-                <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a>
-            </div>
-            <div class="col5">
-                <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col5">
-                <a href="http://www.hello2morrow.com/" target="_blank"><img src="images/sponsors/hello2morrow.png" alt="Hello2Morrow"/></a>
-            </div>
-            <div class="col5">
-                <a href="http://www.vaadin.com/" target="_blank"><img src="images/sponsors/vaadin.png" alt="Vaadin"/></a>
-            </div>
-            <div class="col5">
-                <a href="http://www.aca-it.be/" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
-            </div>
-        </div>
-    </div>
-</div>
 
 <footer class="area grey">
     <div class="grid">
@@ -303,13 +272,44 @@
         </div>
     </div>
 </footer>
+<div id="sponsors" class="white sponsors">
+    <div class="grid">
+        <!-- <h2>Our sponsors</h2> -->
+        <div class="row">
+            <div class="col5">
+                <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img
+                        src="images/sponsors/oracle.png" alt="Oracle"/></a>
+            </div>
+            <div class="col5">
+                <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
+            </div>
+            <div class="col5">
+                <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a>
+            </div>
+            <div class="col5">
+                <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col5">
+                <a href="http://www.hello2morrow.com/" target="_blank"><img src="images/sponsors/hello2morrow.png" alt="Hello2Morrow"/></a>
+            </div>
+            <div class="col5">
+                <a href="http://www.vaadin.com/" target="_blank"><img src="images/sponsors/vaadin.png" alt="Vaadin"/></a>
+            </div>
+            <div class="col5">
+                <a href="http://www.aca-it.be/" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
+            </div>
+        </div>
+    </div>
+</div>
 
-<div id="disclaimer" class="area black">
+<div id="disclaimer" class="area black hidden">
     <div class="grid">
         <div class="row">
-            <!--<div class="col11">-->
-                <!--<a href="#">privacy policy</a> | <a href="#">disclaimer</a>-->
-            <!--</div>-->
+            <div class="col11">
+                <a href="#">privacy policy</a> | <a href="#">disclaimer</a>
+            </div>
         </div>
     </div>
 </div>
