- Added Geerts picture - Added Newsletter link

--- a/app/index.html
+++ b/app/index.html
@@ -268,6 +268,10 @@
                     <li><a href="https://www.facebook.com/devoxxcom">Facebook</a></li>
                     <li><a href="https://twitter.com/devoxx">Twitter</a></li>
                 </ul>
+                <h4>Newsletter</h4>
+                <ul>
+                    <li><a href="http://devoxx.us2.list-manage.com/subscribe?u=d777b04a23f45f06379a1e710&id=c6f296fa2c">Subscribe</a></li>
+                </ul>
             </div>
         </div>
     </div>
