Fix caching in the REST call Link to mailinglist

--- a/app/index.html
+++ b/app/index.html
@@ -263,10 +263,11 @@
             </div>
 
             <div class="col5">
-                <h4>Follow us</h4>
+                <h4>Keep in touch</h4>
                 <ul>
                     <li><a href="https://www.facebook.com/devoxxcom">Facebook</a></li>
                     <li><a href="https://twitter.com/devoxx">Twitter</a></li>
+                    <li><a href="http://eepurl.com/d35a9">Newsletter</a></li>
                 </ul>
                 <h4>Newsletter</h4>
                 <ul>
