Correction of typeo's

--- a/app/index.html
+++ b/app/index.html
@@ -269,10 +269,6 @@
                     <li><a href="https://twitter.com/devoxx">Twitter</a></li>
                     <li><a href="http://eepurl.com/d35a9">Newsletter</a></li>
                 </ul>
-                <h4>Newsletter</h4>
-                <ul>
-                    <li><a href="http://devoxx.us2.list-manage.com/subscribe?u=d777b04a23f45f06379a1e710&id=c6f296fa2c">Subscribe</a></li>
-                </ul>
             </div>
         </div>
     </div>
@@ -309,15 +305,15 @@
     </div>
 </div>
 
-<div id="disclaimer" class="area black hidden">
-    <div class="grid">
-        <div class="row">
-            <div class="col11">
-                <a href="#">privacy policy</a> | <a href="#">disclaimer</a>
-            </div>
-        </div>
-    </div>
-</div>
+<!--<div id="disclaimer" class="area black hidden">-->
+    <!--<div class="grid">-->
+        <!--<div class="row">-->
+            <!--<div class="col11">-->
+                <!--<a href="#">privacy policy</a> | <a href="#">disclaimer</a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 </body>
 
