--- a/app/index.html
+++ b/app/index.html
@@ -293,6 +293,9 @@
         </div>
         <div class="row">
             <div class="col5">
+                <a href="http://www.cloudbees.com/" target="_blank"><img src="images/sponsors/cloudbees.png" alt="CloudBees"/></a>
+            </div>
+            <div class="col5">
                 <a href="http://www.hello2morrow.com/" target="_blank"><img src="images/sponsors/hello2morrow.png" alt="Hello2Morrow"/></a>
             </div>
             <div class="col5">
