try a correction for sponsors

--- a/app/index.html
+++ b/app/index.html
@@ -32,13 +32,13 @@
         }
     </style>
 
-    <!-- build:js scripts/scripts-ie.js -->
     <!-- TODO: scripts to bottom of the page (performance) -->
     <!--[if lt IE 9]>
+    <!-- build:js scripts/scripts-ie.js -->
     <script src="components/es5-shim/es5-shim.js"></script>
     <script src="components/json3/lib/json3.min.js"></script>
-    <![endif]-->
     <!-- endbuild -->
+    <!--[endif]-->
 
     <!-- build:js scripts/scripts.js -->
     <script src="components/jquery/jquery.js"></script>
