get API url from config.js (generated based on application configuration)

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,8 @@
     <!-- endbuild -->
     <!--[endif]-->
 
+    <script src="/config.js"></script>
+
     <!-- build:js scripts/scripts.js -->
     <script src="components/jquery/jquery.js"></script>
     <script src="components/modernizr/modernizr.js"></script>
