--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
     <script src="components/jquery.uniform/jquery.uniform.js"></script>
     <script src="components/isotope/jquery.isotope.js"></script>
     <script src="components/moment/moment.js"></script>
+    <script src="scripts/services/countries.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
     <script src="scripts/services.js"></script>
