refactor: splitted up the services into multiple files

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,15 @@
     <script src="scripts/services/countries.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
-    <script src="scripts/services.js"></script>
+    <script src="scripts/services/services.js"></script>
+    <script src="scripts/services/AnonymousService.js"></script>
+    <script src="scripts/services/ContactService.js"></script>
+    <script src="scripts/services/EventService.js"></script>
+    <script src="scripts/services/ReferenceService.js"></script>
+    <script src="scripts/services/SpeakersService.js"></script>
+    <script src="scripts/services/TagsService.js"></script>
+    <script src="scripts/services/TalksService.js"></script>
+    <script src="scripts/services/UsersService.js"></script>
     <script src="scripts/eventbus.js"></script>
     <script src="scripts/directives.js"></script>
     <script src="scripts/filters.js"></script>
