--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
     <script src="scripts/services/TagsService.js"></script>
     <script src="scripts/services/TalksService.js"></script>
     <script src="scripts/services/UsersService.js"></script>
-    <script src="scripts/eventbus.js"></script>
+    <script src="scripts/services/eventbus.js"></script>
     <script src="scripts/directives.js"></script>
     <script src="scripts/filters.js"></script>
     <script src="scripts/generic_controllers.js"></script>
