--- a/app/index.html
+++ b/app/index.html
@@ -296,10 +296,10 @@
                 <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
             </div>
             <div class="col5">
-                <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a>
+                <a href="http://www.jetbrains.com/" target="_blank"><img src="images/sponsors/jetbrains.png" alt="JetBrains"/></a>
             </div>
             <div class="col5">
-                <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
+                <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a>
             </div>
         </div>
         <div class="row">
@@ -318,10 +318,11 @@
         </div>
         <div class="row">
             <div class="col5">
-                <a href="http://www.kiffer.be" target="_blank"><img src="images/sponsors/kiffer.png" alt="Kiffer"/></a>
+                <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
             </div>
+
             <div class="col5">
-                
+                <a href="http://www.kiffer.be" target="_blank"><img src="images/sponsors/kiffer.png" alt="Kiffer"/></a>
             </div>
             <div class="col5">
                 
