Triology added as sponsor

--- a/app/index.html
+++ b/app/index.html
@@ -250,6 +250,7 @@
                     <li><a href="#about">About CFP</a></li>
                     <li><a href="#venue">Venue</a></li>
                     <li><a href="#faq">FAQ</a></li>
+                    <!--<li><a href="#sponsors">Sponsors</a></li>-->
                     <li><a href="#">Schedule TBA</a></li>
                     <li><a href="#">Speakers TBA</a></li>
                 </ul>
@@ -325,7 +326,7 @@
                 <a href="http://www.kiffer.be" target="_blank"><img src="images/sponsors/kiffer.png" alt="Kiffer"/></a>
             </div>
             <div class="col5">
-                
+                <a href="http://www.triology.de" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
             </div>
             <div class="col5">
                 
