Added Sponsor page

--- a/app/index.html
+++ b/app/index.html
@@ -250,7 +250,7 @@
                     <li><a href="#about">About CFP</a></li>
                     <li><a href="#venue">Venue</a></li>
                     <li><a href="#faq">FAQ</a></li>
-                    <!--<li><a href="#sponsors">Sponsors</a></li>-->
+                    <li><a href="#sponsors">Sponsorships</a></li>
                     <li><a href="#">Schedule TBA</a></li>
                     <li><a href="#">Speakers TBA</a></li>
                 </ul>
@@ -335,15 +335,18 @@
     </div>
 </div>
 
-<!--<div id="disclaimer" class="area black hidden">-->
-    <!--<div class="grid">-->
-        <!--<div class="row">-->
-            <!--<div class="col11">-->
+<div id="disclaimer" class="area black">
+    <div class="grid">
+        <div class="row">
+            <div class="col11">
                 <!--<a href="#">privacy policy</a> | <a href="#">disclaimer</a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
+            </div>
+            <div class="col9">
+                design by <a href="http://www.three-sixty.be" target="_blank">Three-Sixty Media</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 
