--- a/app/index.html
+++ b/app/index.html
@@ -287,50 +287,48 @@
 </footer>
 <div id="sponsors" class="white sponsors">
     <div class="grid">
-        <!-- <h2>Our sponsors</h2> -->
         <div class="row">
-            <div class="col5">
+            <div class="col5" align="center">
                 <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img
                         src="images/sponsors/oracle.png" alt="Oracle"/></a>
             </div>
-            <div class="col5">
+            <div class="col5" align="center">
                 <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
             </div>
-            <div class="col5">
+            <div class="col5" align="center">
+                <a href="https://developers.google.com/" target="_blank"><img src="images/sponsors/google.png" alt="Google"/></a>
+            </div>
+            <div class="col5" align="center">
                 <a href="http://www.jetbrains.com/" target="_blank"><img src="images/sponsors/jetbrains.png" alt="JetBrains"/></a>
             </div>
-            <div class="col5">
+        </div>
+        <div class="row">
+            <div class="col5" align="center">
                 <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a>
             </div>
-        </div>
-        <div class="row">
-            <div class="col5">
+            <div class="col5" align="center">
                 <a href="http://www.cloudbees.com/" target="_blank"><img src="images/sponsors/cloudbees.png" alt="CloudBees"/></a>
             </div>
-            <div class="col5">
+            <div class="col5" align="center">
                 <a href="http://www.hello2morrow.com/" target="_blank"><img src="images/sponsors/hello2morrow.png" alt="Hello2Morrow"/></a>
             </div>
-            <div class="col5">
+            <div class="col5" align="center">
                 <a href="http://www.vaadin.com/" target="_blank"><img src="images/sponsors/vaadin.png" alt="Vaadin"/></a>
-            </div>
-            <div class="col5">
-                <a href="http://www.aca-it.be/" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
             </div>
         </div>
         <div class="row">
-            <div class="col5">
+            <div class="col5" align="center">
+                <a href="http://www.aca-it.be/" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
+            </div>
+            <div class="col5" align="center">
                 <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
             </div>
-
-            <div class="col5">
+            <div class="col5" align="center">
                 <a href="http://www.kiffer.be" target="_blank"><img src="images/sponsors/kiffer.png" alt="Kiffer"/></a>
             </div>
-            <div class="col5">
-                <a href="http://www.triology.de" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
+            <div class="col5" align="center">
+                <a  href="http://www.triology.de" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
             </div>
-            <div class="col5">
-                
-            </div>            
         </div>
     </div>
 </div>
