Added Typesafe as sponsor

--- a/app/index.html
+++ b/app/index.html
@@ -330,6 +330,17 @@
                 <a  href="http://www.triology.de" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
             </div>
         </div>
+        <div class="row">
+            <div class="col5" align="center">
+                <a href="http://www.typesafe.com/" target="_blank"><img src="images/sponsors/typesafe.png" alt="Typesafe"/></a>
+            </div>
+            <div class="col5" align="center">
+            </div>
+            <div class="col5" align="center">
+            </div>
+            <div class="col5" align="center">
+            </div>
+        </div>
     </div>
 </div>
 
