--- a/app/index.html
+++ b/app/index.html
@@ -335,6 +335,7 @@
                 <a href="http://www.typesafe.com/" target="_blank"><img src="images/sponsors/typesafe.png" alt="Typesafe"/></a>
             </div>
             <div class="col5" align="center">
+                <a href="http://www.parleys.com/" target="_blank"><img src="images/sponsors/parleys.png" alt="Parleys"/></a>
             </div>
             <div class="col5" align="center">
             </div>
